fix(player_api): Add cham name + icon to most played.
